1998-05-26  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* protocol.el (named-object): New structure.
	(*doc-types*): New types :global-doc, :global-begin, :global-end,
	:global-break.
	(sgml-refsect1-named-object-list, sgml-refsect1-text-list): New
	functions.
	(sgml-refsect1-macro-list, sgml-refsect1-global-list): New
	functions
	(use sgml-refsect1-named-object-list).
	(sgml-refsect1-description-list): Use sgml-refsect1-text-list.
	(load-protocol): Parse //# (traditional) and //G (traditional and
	same-line).
	(insert-text): Reset to start of accessible region, not start
	of line.

	* Makefile.rules: Add $(top_srcdir)/history.el and
	$(top_srcdir)/common.el as a dependents of %revhistory.sgml.  Set
	SWARMDOCS environment variable to the fully-resolved top_srcdir.

	* history.el (process-changelog): Always print REVNUMBER pair,
	even when empty.  

	* history.el, protocol.el: Load common.el from directory
	specified by SWARMDOCS directory.

	* common.el (get-swarmdocs): Try to get it from SWARMDOCS environment
	variable, otherwise default to SWARMHOME/../swarmdocs.

1998-05-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* history.el (process-changelog): print closing REVISION tag.

1998-05-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.rules: Make phony fot, tex, dvi, ps, rtf, and html
	depend on all.

	* protocol.el (sgml-generate-indices): Use get-swarmdocs-build-rea
	instead of get-swarmdocs.

	* history.el: Require gnus for time encoding function.
	Load common.el from swarmdocs path derived from SWARMHOME.
	(process-changelog): Rename from parse-changelogs.
	Modify to only process a module at a time, defaulting to
	command line argument of batch Emacs run.

	* common.el (get-swarmdocs-build-area): New function.
	(pathname-for-swarmdocs-revision-output,
	pathname-for-swarmdocs-pages-output): Use get-swarmdocs-build-area
	isntead of get-swarmdocs.

	* Makefile.am, acconfig.h, configure.in, Makefile.rules: New files.
