@@ -67,3 +67,19 @@
             module-name
             "revhistory.sgml")))
   
+(defun insert-text (text)
+  (when text
+    (let ((beg (point)))
+      (insert text)
+      (let ((end (point)))
+        (save-excursion
+          (save-restriction
+            (narrow-to-region beg end)
+            (goto-char (point-min))
+            (save-excursion
+              (while (search-forward "<" nil t)
+                (replace-match "&lt;")))
+            (save-excursion
+              (while (search-forward ">" nil t)
+                (replace-match "&gt;")))))))))
+
