@@ -170,7 +170,7 @@
                   (insert author)
                   (insert "</AUTHORINITIALS>\n")
                   (insert "<REVREMARK>\n")
-                  (insert (changelog-item-description changelog-item))
+                  (insert-text (changelog-item-description changelog-item))
                   (insert "</REVREMARK>\n")
                   (insert "</REVISION>\n")))
       (insert "</REVHISTORY>\n"))))
